--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,20 +9,36 @@ $color-white: #FFFFFF;
 $font-type: Arial;
 
 h1.project-name { color: $color-white !important; }
-h1{ color: $color-purple !important; }
-h2 { color: $color-purple !important; }
-h3 { color: $color-purple !important; }
-h4 { color: $color-purple !important; }
+h1 { 
+  color: $color-purple !important; 
+}
 
-body{font-family: $font-type;}
+h2 { 
+  color: $color-purple !important; 
+}
+
+h3 { 
+  color: $color-purple !important; 
+}
+
+h4 { 
+  color: $color-purple !important; 
+}
+
+body{
+  font-family: $font-type;
+}
 
 .page-header{
-    background-color: aliceblue;
-    background-image: linear-gradient(120deg, #663366, #fff)
+    background-color: #663366;
+    text-align: left !important;
+    
 }
+
 a{
     color: $color-purple;
 }
+
 ol.breadcrumb {
     padding: 10px 16px;
     list-style: none;
