--- a/css/solo.css
+++ b/css/solo.css
@@ -66,10 +66,10 @@ h1 a {
 h2 {
   margin-top: 2rem;
   font-size: 1.75rem;
-  font-weight: 500;
+  font-weight: bolder;
   margin-bottom: 5rem;
   color: #555;
-  text-align: right;
+  text-align: left;
   margin-right: -4rem;
 }
 
@@ -77,8 +77,8 @@ h2 {
   h2 {
     margin-top: 2.5rem;
     font-size: 1.75rem;
-    margin-bottom: 8rem;
-    margin-right: -4rem;
+    margin-bottom: 1rem;
+    margin-left: -1rem;
   }
 }
 
