--- a/css/solo.css
+++ b/css/solo.css
@@ -64,13 +64,11 @@ h1 a {
 }
 
 h2 {
-  margin-top: 2rem;
+  margin-top: 2rem -2rem 1.75rem -2rem;
   font-size: 1.75rem;
   font-weight: bolder;
-  margin-bottom: 5rem;
   color: #555;
   text-align: left;
-  margin-right: -4rem;
 }
 
 @media (min-width: 30rem) {
@@ -86,6 +84,9 @@ h3 {
   margin: 2rem -2rem 1.75rem -2rem;
   margin-top: 2rem;
   font-size: 1.75rem;
+  font-weight: bold;
+  text-decoration: underline;
+  color: #777;
 }
 
 @media (min-width: 30rem) {
