--- a/assets/css/solo.css
+++ b/assets/css/solo.css
@@ -81,19 +81,16 @@ h2 {
 }
 
 h3 {
-  margin: 2rem -2rem 1.75rem -2rem;
-  margin-top: 2rem;
-  font-size: 2rem;
-  font-weight: bold;
+  font-size: 1.5rem;
+  font-weight: normal;
   text-decoration: underline;
   color: #777;
 }
 
 @media (min-width: 30rem) {
   h3 {
-    margin-top: 2.5rem;
-    font-size: 2rem;
-    margin-bottom: 1.5rem;
+    margin-top: 1.5rem;
+    font-size: 1.5rem;
   }
 }
 
