--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,9 +9,8 @@
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/normalize.css">
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/solo.css">
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/syntax.css">
-  {% if site.font-awesome-include %}<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">{% endif %}
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/rrssb.css">
-
   <script src="{{ site.baseurl }}/assets/scripts/jquery.js"></script>
   <link rel="canonical" href="{{ site.url }}" />
 </head>
@@ -23,5 +22,6 @@
     </div>
   </article>
 <script src="{{ site.baseurl }}/assets/scripts/rrssb.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
