default.html implementeren bootstrap

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,9 @@
 <body>
   <article>
    <div class="container">
-    <h1><a href="./">{{ site.tag_text }}</a></h1>
+    <div class="jumbotron rounded-3">
+      <h1 class="display-5 fw-bold"><a href="./">{{ site.tag_text }}</a></h1>
+    </div> 
     {{ content }}
     </div>
   </article>
