--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,19 +5,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="{{ site.description }}">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{{ site.title }}</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/normalize.css">
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/solo.css">
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/syntax.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/rrssb.css">
   <script src="{{ site.baseurl }}/assets/scripts/jquery.js"></script>
   <link rel="canonical" href="{{ site.url }}" />
 </head>
 <body>
-  <article>
+  <article class="container">
    <div class="container">
-    <div class="jumbotron rounded-3">
+    <div class="row col-12 rounded-3">
       <h1 class="display-5 fw-bold"><a href="./">{{ site.tag_text }}</a></h1>
     </div> 
     {{ content }}
