--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <title>{{ site.title }}</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="{{ site.description }}">
@@ -13,11 +14,9 @@
   <link rel="canonical" href="{{ site.url }}" />
 </head>
 <body>
-  <article class="container">
-   <div class="container">
-    <div class="row col-12 rounded-3">
-      <h1 class="display-5 fw-bold"><a href="./">{{ site.tag_text }}</a></h1>
-    </div> 
+  <article>
+   <div>
+      <h1><a href="/">{{ site.tag_text }}</a></h1>
     {{ content }}
     </div>
   </article>
