--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/solo.css">
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/syntax.css">
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/rrssb.css">
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
   <script src="{{ site.baseurl }}/assets/scripts/jquery.js"></script>
   <link rel="canonical" href="{{ site.url }}" />
 </head>
