--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
   <link rel="canonical" href="{{ site.url }}" />
 </head>
 <body>
-  <article>
+  <article class="container">
    <div>
       <h1><a href="/">{{ site.tag_text }}</a></h1>
     {{ content }}
