--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
 <body>
   <article class="container">
    <div>
-      <h1><a href="/{{ site.baseurl }}">{{ site.tag_text }}</a></h1>
+      <h1><a href="{{ site.baseurl }}">{{ site.tag_text }}</a></h1>
     {{ content }}
     </div>
   </article>
