--- a/assets/css/solo.css
+++ b/assets/css/solo.css
@@ -157,6 +157,7 @@ word-wrap: break-word;
 
 .container img {
   margin: 2em auto 2em auto;
+  align-items: start;
   display: block;
   max-width: 75%;
 }
