--- a/assets/css/solo.css
+++ b/assets/css/solo.css
@@ -75,6 +75,7 @@ h2 {
   height: 1.4rem;
   display: inline-flex !important;
   margin: 0px 0px 0px -1rem !important;
+  border: none;
 }
 
 @media (min-width: 30rem) {
@@ -160,6 +161,7 @@ word-wrap: break-word;
   border-color: #999;
   border-width: 1px;
   max-width: 75%;
+  margin-top:-1rem;
 }
 
 @media (max-width: 635px) {
