--- a/assets/css/solo.css
+++ b/assets/css/solo.css
@@ -75,7 +75,7 @@ h2 {
   height: 1.4rem;
   display: inline-flex !important;
   margin: 0px 0px 0px -1rem !important;
-  border: none;
+  border: none !important;
 }
 
 @media (min-width: 30rem) {
