solo.css aangepast met kleurenfilter

--- a/assets/css/solo.css
+++ b/assets/css/solo.css
@@ -295,12 +295,15 @@ pre > code {
 }
 .fg-red {
   color:#d94400 !important;
+  filter: invert(21%) sepia(100%) saturate(7414%) hue-rotate(359deg) brightness(94%) contrast(117%);
 }
 .fg-blue {
   color:#0074d9 !important;
+  filter: invert(21%) sepia(100%) saturate(7414%) hue-rotate(210deg) brightness(94%) contrast(117%);
 }
 .fg-green {
   color:#009044 !important;
+  filter: invert(21%) sepia(100%) saturate(7414%) hue-rotate(90deg) brightness(94%) contrast(117%);
 }
 
 .inline-h2-icon {
