update class inline-h1-icon in solo.css

--- a/assets/css/solo.css
+++ b/assets/css/solo.css
@@ -347,7 +347,8 @@ pre>code {
 
 .inline-h1-icon {
   height: 2.2rem;
-  display: inline-flex !important;
+  display: inline-block !important;
+  vertical-align: middle;
   margin: 0rem !important;
   border: none !important;
 }
